Fix wrong color variable

--- a/src/Certificationy/Bundle/WebBundle/Resources/private/less/global.css
+++ b/src/Certificationy/Bundle/WebBundle/Resources/private/less/global.css
@@ -7,7 +7,7 @@ body {
   font-family: "open_sansregular", Helvetica, Arial, sans-serif;
   line-height: 20px;
   color: #333;
-  background-color: #333333;
+  background-color: #ffffff;
 }
 #wrap {
   min-height: 100%;
