--- a/src/Certificationy/Bundle/WebBundle/Resources/private/less/variable.less
+++ b/src/Certificationy/Bundle/WebBundle/Resources/private/less/variable.less
@@ -1,4 +1,4 @@
 @import "../../../../../../../vendor/twbs/bootstrap/less/variables.less";
 
 @font-family-sans-serif:  "open_sansregular", Helvetica, Arial, sans-serif;
-@body-bg: #333;
+@body-bg: #fff;
